--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   padding:0;
   box-sizing:border-box;
   font-family: muli;
-}
+ }
 .navbar{
   background-color:#fff!important;
 
@@ -37,43 +37,71 @@
     border-bottom: none;
   }
 }
+#header{
+  width:100%;
+  height:80%;
+  margin-top:70px;
 
+}
+#header h1{
+  margin:0 0 10px 0;
+  font-size:48px;
+  font-weight:600px;
+  color:black;
 
+  
+}
+#header .brand-name{
+ color:#3498db;
+  
+}
+#header h2{
+  color:#484848;
+  font-size:24px;
+   
+ }
+ #header .btn-get-started{
+  font: weight 500;
+  font-size: 16px;
+  letter-spacing: 1px;
+  display:inline-block;
+  padding:10px 30px;
+  border-radius: 50px;
+  transition: 0.5s;
+  columns: #3498db;
+  text-decoration: none;
+   
+ }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#header.btn-get-started:hover{
+  background:#3498db;
+  color:#fff;
+}
+.header-img{
+  text-align: right;
+}
+#header.animated{
+  animation:up-down 2s ease-in-out infinite alternate-reverse both;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
